--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@ Interchange Event List
   }
 </style>
 
-<p> Available Books to Interchange </p>
+<p> Welcome the our Hotel Reservation Application </p>
 
 <table class="table is-hoverable">
 
