--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@ Interchange Event List
 
   <tr>
     <th>Owner</th>
-    <th>Book Name</th>
+    <th>Hotel Name</th>
     <th>Book Author</th>
     <th>Total Pages</th>
     <th>Publisher</th>
