--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@ Sign Up
 {% from "includes/formhelpers.html" import render_field %}
 <center>
 
-<h3>Sign Up</h3>
+<h3>Sign Up Page</h3>
 <hr>
 
 <form method=post>
